demo/k8s/erpnext/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-erpnext
  name: demo-erpnext
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: demo-erpnext
  type: ClusterIP
