demo/k8s/erpnext/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-erpnext-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: frappe.demo.erpgo.az
    http:
      paths:
      - backend:
          serviceName: demo-erpnext
          servicePort: 8000
        path: /
  tls:
  - hosts:
    - frappe.demo.erpgo.az
    secretName: frappe-demo-erpgo-tls
